...
        app:boxStrokeColor="@color/primary_blue"
        app:hintTextColor="@color/primary_blue"
        app:startIconDrawable="@android:drawable/ic_menu_search"
        app:startIconTint="@color/primary_blue">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

...
        android:layout_height="32dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvResults"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/tvNoResults"
...
