...
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="Comments"
                    android:src="@drawable/ic_comment"
                    app:tint="@color/primary_blue" />

                <Button
                    android:id="@+id/btnDeleteEvent"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:backgroundTint="@color/primary_blue"
                    android:minHeight="40dp"
                    android:paddingHorizontal="16dp"
                    android:text="@string/delete_event"
...
